 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.11rc1

....I..... [ZBX-4461] changed binary path from bin to sbin in FreeBSD initscripts (Richlv)
..F....... [ZBX-4457] updated French translation; thanks to Joseph Bueno (Richlv)
..F....... [ZBX-3909] fixed link to null on menu and non-hiding menu in maps (Slava)
...G...... [ZBX-4421] added individual CPU statistics on FreeBSD (Andris)
........S. [ZBX-4466] fixed inserting UNKNOWN events with incorrect 'clock' values (Sasha)
........S. [ZBX-2802] fixed handling of NodeNoHistory and NodeNoEvents parameters (Sasha)
...G...PS. [ZBX-4394] fixed handling of log rotation failure (Andris)
..F....... [ZBX-4455] fixed the 'sortorder' field validation in the IT services form (pavels)
..F....... [ZBX-4447] fixed object selection in several forms in IE6 and IE7 (pavels)
........S. [ZBX-4298] fixed a number of deleted events in a deleted data report (Sasha)

Changes for 1.8.10

1.8.10rc2 was released as 1.8.10 without any changes

Changes for 1.8.10rc2

..F....... [ZBX-2843] fixed log trigger creation menu in items list (Vedmak)

Changes for 1.8.10rc1

..F....... [ZBX-3219] Translating script error to human language (Slava)
.......PS. [ZBX-4424] fixed handling of a long localized content by history syncer (Sasha)
.......PS. [ZBX-4424] fixed handling of a localized content with incorrect utf8 characters (Sasha)
..F....... [ZBX-2737] fixed various messages at linking templates (sanja)
A......... [ZBX-4273] fixed getting permission error while creating an action (sanja)
....I..... [ZBX-4377] fixed error message when checking if libcurl can be linked statically (dimir)
..F....... [ZBX-4391] fixed suffix support in trigger testing interface (Slava)