@@ -384,6 +384,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.11rc1
 
+A......... [ZBX-4337] fixed possible typo in class.cusermacro.php (sanja)
 ....I..... [ZBX-4461] changed binary path from bin to sbin in FreeBSD initscripts (Richlv)
 ..F....... [ZBX-4457] updated French translation; thanks to Joseph Bueno (Richlv)
 ..F....... [ZBX-3909] fixed link to null on menu and non-hiding menu in maps (Slava)
